# interview_toolkit

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TYPING.md  install.py  interview_toolkit.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
scripts/: release.py  run_mypy.py  run_tests.py
src/: __init__.py
src/llm/: __init__.py  provider.py  question_generator.py
src/pdf/: __init__.py  color_schemes.py  generator.py  motivational_quotes.py  page_generators.py  pdf_creator.py  pdf_utils.py  progress_messages.py  question_loader.py  text_renderer.py  utils.py
src/utils/: __init__.py  config.py  error_handling.py  logging.py  logging_config.py  version.py
tests/: __init__.py  test_color_schemes.py  test_config.py  test_error_handling.py  test_logging_config.py  test_ollama_provider.py  test_provider.py  test_question_generator.py  test_question_loader.py
