[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interview-toolkit"
version = "0.2.0"
description = "A comprehensive tool for generating and managing interview questions with AI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Nick G", email = "nick@gm-sunshine.com"}
]
maintainers = [
    {name = "Nick G", email = "nick@gm-sunshine.com"}
]
keywords = ["interview", "questions", "ai", "pdf", "generator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Topic :: Office/Business",
]
dependencies = [
    "openai>=1.12.0",
    "reportlab>=4.1.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "pillow>=10.0.0",
    "qrcode>=7.4.2",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "black>=24.3.0",
    "isort>=5.13.2",
    "flake8>=6.1.0",
    "mypy>=1.9.0",
    "pre-commit>=3.5.0",
    "pydocstyle>=6.0.0",
    "pylint>=3.1.0",
    "types-requests>=2.31.0",
]

[project.urls]
"Homepage" = "https://github.com/GM-Sunshine/interview_toolkit"
"Bug Tracker" = "https://github.com/GM-Sunshine/interview_toolkit/issues"
"Documentation" = "https://github.com/GM-Sunshine/interview_toolkit#readme"

[project.scripts]
interview-toolkit = "interview_toolkit:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src"]

[tool.setuptools.package-data]
"src" = ["py.typed"]
"src.pdf.fonts" = ["*.ttf", "*.otf"]
"src.pdf.logos" = ["*.png", "*.jpg", "*.svg"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: mark a test as slow",
    "integration: mark a test as integration test",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
] 